samples/_failures_safe/1761541032_29d197_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d372b5e.c: In function ‘main’:
./samples/SAFE/__tmp_3d372b5e.c:142:21: error: expected declaration or statement at end of input
  142 |                     printf("Result of multiplication:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_3d372b5e.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d372b5e.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d372b5e.c:142:21: error: expected declaration or statement at end of input
